<resources>
    <string name="app_name">Prism Express</string>
    <string name="no_internet">Please check your internet</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- bottom menu names-->
    <string name="menu">MENU</string>
    <string name="scan">SCAN</string>
    <string name="offer">OFFER</string>
    <string name="point">POINTS</string>
    <string name="others">OTHERS</string>

    <string name="logout">LOGOUT</string>
    <string name="location">Location</string>
    <string name="categories">Categories</string>
    <string name="search">Search for Products</string>
    <string name="nodata">No data found</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  for registration form-->
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="register">Register</string>
    <string name="userName">UserName</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <!-- For scan and pay -->
    <string name="vpa">kkmotog4backup@oksbi</string>
    <string name="payee">Krishna</string>
    <string name="transaction_description">test transaction</string>
    <string name="amount">1.00</string>
    <string name="click_the_button_below_to_start_transaction_nit_will_get_you_to_upi_app_of_your_choice_where_you_can_complete_transaction_of_rs_1">Click the button below to start transaction.\nIt will get you to UPI app of your choice where you can complete transaction of RS 1.</string>
    <string name="test_transaction">Test Transaction</string>
    <string name="add_to_cart">Add to Cart</string>

</resources>
