<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_scan"
            android:title="@string/scan" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offers"
            android:title="@string/offer" />
        <item
            android:id="@+id/nav_points"
            android:icon="@drawable/ic_points"
            android:title="@string/point" />
        <item
            android:id="@+id/nav_others"
            android:icon="@drawable/ic_others"
            android:title="@string/others" />
        <item
            android:id="@+id/nav_logout"
            android:visible="true"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout" />
    </group>


</menu>
