<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@color/colorPrimary"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="?attr/actionBarSize"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:padding="@dimen/_3sdp"
            app:srcCompat="@drawable/ic_hamburger" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/iv_location"
            android:layout_toRightOf="@+id/iv_menu"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:text="@string/location"
                android:textColor="@android:color/white"
                android:textStyle="normal"
                android:visibility="gone" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_whatsapp"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_5sdp"
            android:padding="@dimen/_3sdp"
            app:srcCompat="@drawable/ic_whatsapp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_layout"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="0.8"
            android:background="@drawable/white_background"
            android:gravity="center"
            android:text="@string/categories"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1.2"
            android:background="@drawable/white_background"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20ssp"
                android:layout_marginLeft="@dimen/_9sdp"
                app:srcCompat="@drawable/ic_search" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>